# rpi_ventilator

./: .gitignore  LICENSE  README.md  distance.py  pyproject.toml  relay.py  relay_cycle.py  ventilator.py
tests/: test_rpi_ventilator.py
