[tool.poetry]
name = "rpi_ventilator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^2.7"
"rpi.gpio" = "^0.7.0"
pi-plates = "^6.2"
spidev = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
